force-app/main/default/objects/Inspection_Audit__c/Inspection_Audit__c.object-meta.xml
<CustomObject>
    <label>Inspection Audit</label>
    <nameField>
        <label>Inspection Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>inspection Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>