force-app/main/default/objects/Inspection_Audit__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipLabel>inspection Audits</relationshipLabel>
    <relationshipName>inspection_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>