force-app/main/default/objects/Inspection_Audit__c/fields/New_Inspector__c.field-meta.xml
<CustomField>
    <fullName>New_Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Inspector</label>
    <referenceTo>Inspector__c</referenceTo>
    <relationshipLabel>inspection Audits (New Inspector)</relationshipLabel>
    <relationshipName>inspection_Audits1</relationshipName>
    <type>Lookup</type>
</CustomField>