force-app/main/default/objects/Inspection_Audit__c/fields/Old_inspector__c.field-meta.xml
<CustomField>
    <fullName>Old_inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Inspector</label>
    <referenceTo>Inspector__c</referenceTo>
    <relationshipLabel>inspection Audits</relationshipLabel>
    <relationshipName>inspection_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>